FlightPath 6.x Changelog
========================

2022-02-12
  Minor tweaks to CSS
  
  Preparing to enable "basge" functionality for the alerts bell.

  Created a new hook "hook_get_alert_count_by_type()" which will let a module declare the total, read, and unread
  counts of *something* (probably content), we we can decideif we need to place a badge on the bell icon at the top of
  the screen.
  
  Created new functions in misc.inc to interact with the hook, as well as a change to content when we set the "last access"
  value, as well as when we create, edit, or delete any content.
  
  

2022-02-09
  Fixed bug where we were checking the wrong permission for adding and editing content from the content page.
  

2022-02-08
  Fixed bug in content module such that you could only have a "file" field if it was named "attachment".  Also added
  the ability to have more than one file field per content form.
  
  Added a little extra styling for form fields in content forms.


2022-02-04
  Made it so if a numeric grade is supplied with MID at the end, it is converted to a letter grade with MID at the end.
  
  Added new function, fp_confirm(), which is meant to work with fp_get_js_confirm_link() to create a modal confirm popup,
  instead of native javascript popup.  From same creator as the fp_alert() dropin replacement.
  

2022-02-02
  Fixed bug where student name was being used instead of faculty name when sending a txt message via Engagements.
  
  Also fixed bug where if student has no number, it was showing that they had opted-out, which was not necessarily true.

  Added extra spans and css styling when showing pie charts.

  Changed delete links on History tab to use simple "X" from font-awesome, both
  for advising and student files.
  
  Changed queries for advising history to look up "groups" of advising sessions by advising_session_token.
  
  Added ability in creating a confirm link (in misc.php) to have a link title